...
    android:orientation="vertical"
    tools:context="com.ak.bakingtutorial.fragments.StepsListFragment">

    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/recipe_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp">

        <LinearLayout
...
                tools:text="ingredients" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/step_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="#CFD8DC"
        android:clipToPadding="false"
        android:scrollbars="vertical" />
...
